--- a/experience-income.ipynb
+++ b/experience-income.ipynb
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lineer regresyon modelini oluşturalım\n",
+    "# Lineer regresyon modelini oluşturalım\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "model = LinearRegression()"
@@ -943,7 +943,7 @@
    "id": "e4b2e8e2-038a-4697-8b97-1769790e3a0e",
    "metadata": {},
    "source": [
-    "#örnek bir tahmin yaptık.9 yıllık tecrübe için maaş?\n",
+    "#örnek bir tahmin yaptık.9 yıllık tecrübe için maaş nedir?\n",
     "46374.81435644 TL 9 yıllık tecrübe için modelin tahmin ettiği maaş değeri."
    ]
   },
